form.field.Picker: added z-index: 20 to the picker container to ensure it stays above table headers

--- a/resources/scss/src/form/field/_Picker.scss
+++ b/resources/scss/src/form/field/_Picker.scss
@@ -4,6 +4,7 @@
         border          : v(pickerfield-container-border);
         box-shadow      : v(pickerfield-container-box-shadow);
         position        : fixed;
+        z-index         : 20;
 
         &:focus {
             outline: none;
